1. перенес классы, разделяя запускаемые классы, с классами сканирования. Для корректной работы Spring