@@ -5,27 +5,48 @@
 
     <parent>
         <groupId>com.mgt-group</groupId>
-        <artifactId>parent-module</artifactId>
+        <artifactId>doc-generator-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>javafx</artifactId>
+    <artifactId>doc-generator-javafx</artifactId>
+    <name>doc-generator javafx</name>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
-    <repositories>
-        <repository>
-            <id>openjfx-repo</id>
-            <url>https://maven.java.net/content/groups/public/</url>
-        </repository>
-    </repositories>
+    <properties>
+        <start-class>com.antonio.ui.SpringJavaFxRunner</start-class>
+
+    </properties>
+<!--    <repositories>-->
+<!--        <repository>-->
+<!--            <id>central-repo</id>-->
+<!--            <url>https://repo1.maven.org/maven2/</url>-->
+<!--        </repository>-->
+<!--        <repository>-->
+<!--            <id>openjfx-repo</id>-->
+<!--            <url>https://maven.java.net/content/groups/public/</url>-->
+<!--        </repository>-->
+<!--        <repository>-->
+<!--            <id>local-repo</id>-->
+<!--            <name>Local Repository</name>-->
+<!--            <url>C:\Users\user\.m2\repository</url>-->
+<!--        </repository>-->
+<!--    </repositories>-->
 
     <dependencies>
         <!-- Связь с core -->
         <dependency>
             <groupId>com.mgt-group</groupId>
-            <artifactId>core</artifactId>
+            <artifactId>doc-generator-core</artifactId>
+            <version>${app.version}</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+            <version>${spring.boot.version}</version>
+        </dependency>
         <!-- JavaFX -->
         <dependency>
             <groupId>org.openjfx</groupId>
@@ -49,19 +70,31 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.antonio.ui.SpringJavaFxRunner</mainClass>
+                    <jvmArguments>
+                        --module-path C:\Users\user\.m2\repository\javafx-sdk-21.0.7\lib
+                        --add-modules javafx.controls,javafx.fxml
+                    </jvmArguments>
+                </configuration>
+            </plugin>
             <!-- JavaFX Maven Plugin -->
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version> <!-- Используем старую версию -->
                 <configuration>
-                    <mainClass>com.antonio.SpringJavaFxRunner</mainClass>
+                    <mainClass>com.antonio.ui.SpringJavaFxRunner</mainClass>
 <!--                    <options>-->
 <!--                        <option>&#45;&#45;module-path</option>-->
 <!--                        <option>C:/Users/user/.m2/repository/javafx-sdk-21.0.7</option>-->
 <!--                        <option>&#45;&#45;add-modules</option>-->
 <!--                        <option>javafx.controls,javafx.fxml</option>-->
 <!--                    </options>-->
+
                 </configuration>
             </plugin>
         </plugins>
